@@ -4,16 +4,15 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.cloud.common.domain.dto.order.OrderCreateDTO;
 import com.cloud.common.domain.dto.order.OrderDTO;
-import com.cloud.order.dto.OrderPageQueryDTO;
 import com.cloud.common.domain.vo.OrderVO;
-import com.cloud.order.converter.OrderConverter;
 import com.cloud.common.exception.EntityNotFoundException;
+import com.cloud.order.converter.OrderConverter;
+import com.cloud.order.dto.OrderPageQueryDTO;
 import com.cloud.order.exception.OrderServiceException;
 import com.cloud.order.exception.OrderStatusException;
 import com.cloud.order.mapper.OrderMapper;
 import com.cloud.order.module.entity.Order;
 import com.cloud.order.module.entity.OrderItem;
-import com.cloud.order.service.CacheService;
 import com.cloud.order.service.OrderItemService;
 import com.cloud.order.service.OrderService;
 import lombok.RequiredArgsConstructor;
@@ -23,7 +22,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 /**
  * 订单服务实现类
@@ -38,12 +37,7 @@ import java.util.concurrent.TimeUnit;
 public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
         implements OrderService {
 
-    // 缓存键前缀
-    private static final String ORDER_CACHE_KEY_PREFIX = "order:";
-    // 缓存过期时间（分钟）
-    private static final long ORDER_CACHE_EXPIRE_MINUTES = 30;
     private final OrderConverter orderConverter;
-    private final CacheService cacheService;
     private final OrderItemService orderItemService;
 
     @Override
@@ -56,7 +50,7 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             Page<OrderVO> voPage = new Page<>(resultPage.getCurrent(), resultPage.getSize(), resultPage.getTotal());
             voPage.setRecords(resultPage.getRecords().stream()
                     .map(orderConverter::toVO)
-                    .toList());
+                    .collect(Collectors.toList()));
             return voPage;
         } catch (Exception e) {
             log.error("分页查询订单失败: ", e);
@@ -73,26 +67,13 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
     @Transactional(rollbackFor = Exception.class)
     public OrderDTO getByOrderEntityId(Long id) {
         try {
-            // 先从缓存中获取
-            String cacheKey = ORDER_CACHE_KEY_PREFIX + "dto:" + id;
-            OrderDTO cachedOrder = cacheService.get(cacheKey);
-            if (cachedOrder != null) {
-                log.debug("从缓存中获取订单DTO信息，订单ID: {}", id);
-                return cachedOrder;
-            }
-
-            // 缓存中没有则从数据库查询
+            // 直接从数据库查询
             Order order = this.baseMapper.selectById(id);
             if (order == null) {
                 throw EntityNotFoundException.order(id);
             }
 
             OrderDTO orderDTO = orderConverter.toDTO(order);
-
-            // 将查询结果放入缓存
-            cacheService.set(cacheKey, orderDTO, ORDER_CACHE_EXPIRE_MINUTES, TimeUnit.MINUTES);
-            log.debug("将订单DTO信息放入缓存，订单ID: {}", id);
-
             return orderDTO;
         } catch (EntityNotFoundException e) {
             throw e;
@@ -110,9 +91,6 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             boolean result = this.baseMapper.insert(order) > 0;
 
             if (result) {
-                // 清除相关缓存
-                clearOrderCache(order.getId());
-
                 log.info("订单创建成功，订单ID: {}", order.getId());
             }
 
@@ -138,8 +116,6 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             boolean result = this.baseMapper.updateById(order) > 0;
 
             if (result) {
-                // 清除相关缓存
-                clearOrderCache(order.getId());
                 log.info("订单更新成功，订单ID: {}", order.getId());
             }
 
@@ -165,21 +141,19 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             if (order.getStatus() != 0) {
                 throw new OrderStatusException(orderId, order.getStatus(), "支付");
             }
+            order.setStatus(1); // 设置为已支付状态
             boolean result = this.baseMapper.updateById(order) > 0;
 
             if (result) {
-                // 清除相关缓存
-                clearOrderCache(orderId);
                 log.info("订单支付成功，订单ID: {}", orderId);
             }
-
+            return result;
         } catch (EntityNotFoundException | OrderStatusException e) {
             throw e;
         } catch (Exception e) {
             log.error("支付订单失败: ", e);
             throw e;
         }
-        return true;
     }
 
     @Override
@@ -195,9 +169,13 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             if (order.getStatus() != 1) {
                 throw new OrderStatusException(orderId, order.getStatus(), "发货");
             }
+            order.setStatus(2); // 设置为已发货状态
+            boolean result = this.baseMapper.updateById(order) > 0;
 
-
-            return true;
+            if (result) {
+                log.info("订单发货成功，订单ID: {}", orderId);
+            }
+            return result;
         } catch (EntityNotFoundException | OrderStatusException e) {
             throw e;
         } catch (Exception e) {
@@ -219,11 +197,10 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             if (order.getStatus() != 2) {
                 throw new OrderStatusException(orderId, order.getStatus(), "完成");
             }
+            order.setStatus(3); // 设置为已完成状态
             boolean result = this.baseMapper.updateById(order) > 0;
 
             if (result) {
-                // 清除相关缓存
-                clearOrderCache(orderId);
                 log.info("订单完成成功，订单ID: {}", orderId);
             }
 
@@ -249,31 +226,21 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             if (order.getStatus() != 0 && order.getStatus() != 1) {
                 throw new OrderStatusException(orderId, order.getStatus(), "取消");
             }
+            order.setStatus(-1); // 设置为已取消状态
             boolean result = this.baseMapper.updateById(order) > 0;
 
             if (result) {
-                // 清除相关缓存
-                clearOrderCache(orderId);
-
                 log.info("订单取消成功，订单ID: {}", orderId);
             }
-
+            return result;
         } catch (EntityNotFoundException | OrderStatusException e) {
             throw e;
         } catch (Exception e) {
             log.error("取消订单失败: ", e);
             throw e;
         }
-        return true;
     }
 
-    /**
-     * 创建订单
-     *
-     * @param orderCreateDTO 订单创建信息
-     * @param currentUserId  当前用户ID
-     * @return 订单信息
-     */
     @Override
     @Transactional(rollbackFor = Exception.class)
     public Boolean createOrder(OrderCreateDTO orderCreateDTO, String currentUserId) {
@@ -323,79 +290,84 @@ public class OrderServiceImpl extends ServiceImpl<OrderMapper, Order>
             // 其他异常包装成订单服务异常抛出
             throw e;
         } finally {
-            // 清除订单相关缓存
-            assert order != null;
-            if (order.getId() != null) {
-                clearOrderCache(order.getId());
-            }
+            // 订单处理完成
+            log.debug("订单创建处理完成");
         }
     }
 
     @Override
+    public OrderDTO createOrder(OrderDTO orderDTO) {
+        // 简化实现：将DTO转换为实体并保存
+        Order order = orderConverter.toEntity(orderDTO);
+        order.setStatus(0); // 设置为待支付状态
+        this.save(order);
+        return orderConverter.toDTO(order);
+    }
+
+    @Override
     public Boolean payOrder(Long orderId, String currentUserId) {
-        return null;
+        return payOrder(orderId);
     }
 
     @Override
     public Boolean shipOrder(Long orderId, String currentUserId) {
-        return null;
+        return shipOrder(orderId);
     }
 
     @Override
     public Boolean completeOrder(Long orderId, String currentUserId) {
-        return null;
+        return completeOrder(orderId);
     }
 
     @Override
     public Boolean cancelOrder(Long orderId, String currentUserId) {
-        return null;
+        return cancelOrder(orderId);
     }
 
     @Override
     public Boolean deleteOrder(Long id) {
-        return null;
+        try {
+            // 先从数据库中删除订单
+            boolean removed = this.removeById(id);
+
+            if (removed) {
+                log.info("订单删除成功，订单ID: {}", id);
+            } else {
+                log.warn("订单删除失败，订单ID: {}", id);
+            }
+
+            return removed;
+        } catch (Exception e) {
+            log.error("删除订单异常，订单ID: {}", id, e);
+            return false;
+        }
     }
 
-    /**
-     * 支付订单
-     *
-     * @param orderId 订单ID
-     * @Override public Boolean deleteOrder(Long id) {
-     * try {
-     * // 先从数据库中删除订单
-     * boolean removed = this.removeById(id);
-     * <p>
-     * if (removed) {
-     * // 清除相关缓存
-     * clearOrderCache(id);
-     * log.info("订单删除成功，订单ID: {}", id);
-     * } else {
-     * log.warn("订单删除失败，订单ID: {}", id);
-     * }
-     * <p>
-     * return removed;
-     * } catch (Exception e) {
-     * log.error("删除订单异常，订单ID: {}", id, e);
-     * return false;
-     * }
-     * }
-     * <p>
-     * /**
-     * 清除订单相关缓存
-     */
-    private void clearOrderCache(Long orderId) {
+    @Override
+    public List<OrderDTO> getOrdersByUserId(Long userId) {
         try {
-            // 清除订单VO缓存
-            String voCacheKey = ORDER_CACHE_KEY_PREFIX + orderId;
-            cacheService.delete(voCacheKey);
-
-            // 清除订单DTO缓存
-            String dtoCacheKey = ORDER_CACHE_KEY_PREFIX + "dto:" + orderId;
-            cacheService.delete(dtoCacheKey);
-
-            log.debug("清除订单缓存，订单ID: {}", orderId);
+            List<Order> orders = this.lambdaQuery()
+                    .eq(Order::getUserId, userId)
+                    .list();
+            return orders.stream()
+                    .map(orderConverter::toDTO)
+                    .toList();
         } catch (Exception e) {
-            log.warn("清除订单缓存失败，订单ID: {}", orderId, e);
+            log.error("根据用户ID查询订单失败，用户ID: {}", userId, e);
+            throw new OrderServiceException("根据用户ID查询订单失败: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public OrderDTO getOrderByOrderNo(String orderNo) {
+        try {
+            // 由于Order实体中没有orderNo字段，这里简化处理
+            // 实际项目中应该首先在Order实体中添加orderNo字段
+            log.warn("暂不支持根据订单号查询，订单号: {}", orderNo);
+            return null;
+        } catch (Exception e) {
+            log.error("根据订单号查询订单失败，订单号: {}", orderNo, e);
+            throw new OrderServiceException("根据订单号查询订单失败: " + e.getMessage());
         }
     }
 }
